# setuprs

./: Cargo.toml  README.md  config.toml
.github/workflows/: rust.yml
config/: .setuprs.toml
src/: cli.rs  error.rs  lib.rs  main.rs  tui.rs
src/cli/: mod.rs
src/core/: mod.rs  utils.rs
src/tui/: app.rs  mod.rs  ui.rs
src/tui/modes/: confirming.rs  errormode.rs  main.rs  mod.rs
