[package]
name = "setuprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.197"
serde_derive = "1.0.197"
toml = "0.8.12"
uuid = { version = "1.8.0", features = ["v4"] }
