[package]
name = "setuprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.14"
clap = { version = "4.5.4", features = ["derive"] }
# color-eyre = "0.6.3"
crossterm = "0.27.0"
glob = "0.3.1"
lazy_static = "1.5.0"
ratatui = "0.27.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serial_test = "3.1.1"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
toml = "0.8.12"
uuid = { version = "1.8.0", features = ["v4"] }
